--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -65,3 +65,10 @@ release:
     ---
 
     Released by [GoReleaser](https://github.com/goreleaser/goreleaser).
+
+changelog:
+  sort: asc
+  filters:
+    exclude:
+      - "^docs:"
+      - "^test:"
