--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -46,7 +46,8 @@ changelog:
       - "^test:"
 
 kos:
-  - repository: ghcr.io/deltxprt/cloudflare-ddns
+  - repositories:
+      - ghcr.io/deltxprt/cloudflare-ddns
     tags:
       - "{{.Version}}"
       - latest
@@ -55,9 +56,6 @@ kos:
     platforms:
       - linux/amd64
       - linux/arm64
-
-docker_signs:
-  - artifacts: manifests
 
 release:
   footer: >-
